# miniweb

./: CMakeLists.txt  Makefile  Makefile.mak  Makefile.sub  Plugin.md  README.md  crc32.c  http.c  http.def  httpapi.h  httpauth.c  httpclient.c  httpclient.h  httpd.vcproj  httpd_vc7.vcproj  httpd_vc8.vcproj  httphandler.c  httpint.h  httpmin.c  httppil.c  httppil.h  httppost.c  httpserial.cpp  httpvod.c  httpvod.h  httpxml.c  httpxml.h  loadplugin.c  loadplugin.h  mediaserver.c  miniweb.c  miniweb.cbp  miniweb.sln  miniweb.vcproj  miniweb.vcxproj  miniweb_vc11.sln  miniweb_vc15.sln  mpd.c  processpil.c  processpil.h  (+5 more)
.github/workflows/: main.yml
7zDec/: 7zDec.vcproj  7zDec_vc7.vcproj  7zDecode.c  7zDll.def  7zDllMain.c  7zInc.h
libctb/include/ctb-0.16/: serportx.h
libctb/include/ctb-0.16/win32/: serport.h
libctb/src/: serportx.cpp
libctb/src/win32/: serport.cpp
miniweb-avih/: LICENSE.md
plugin/: CMakeLists.txt  plugin.c  plugin.vcxproj  plugin.vcxproj.filters
postfile/: httpclient.c  httpclient.h  httpget.c  httpget.h  main.c  postfile.vcproj
webroot/: demo-dyn.htm  index.htm  upload.html  vod.css  vod.html  vod.js  vodcats.html  vodcats.xsl  vodcatslist.xsl  vodcfg.js  vodchars.html  vodchars.xsl  vodcharslist.xsl  vodlist.html  vodlist.xsl  vodplaylist.html  vodplaylist.xsl
win32/: win_compat.h
